@@ -4923,118 +4923,3 @@ task_killer           killer;
 
 	return 0;
 }
-
-/**** UDPCOMM API *************************************************************/
-
-/* The reason for having two very similar APIs (udpSock and udpComm) are
- * mostly historical. 
- * However, udpComm is a slightly higher abstraction which is also implemented
- * over BSD sockets.
- * OTOH, udpSock has stronger typing and offers more features.
- */
-
-/* Redefine stuff for which we create aliases so that we can let the compiler
- * check prototypes.
- */
-
-#define UdpCommPkt        LanIpPacket
-
-int     udpCommSocket(int port)
- 		__attribute__(( alias("udpSockCreate") ));
-#define udpCommSocket          udpSockCreate
-
-int     udpCommClose(int sd)
-		__attribute__(( alias("udpSockDestroy")));
-#define udpCommClose           udpSockDestroy
-
-int     udpCommConnect(int sd, uint32_t diaddr, int port)
-		__attribute__(( alias("udpSockConnect") ));
-#define udpCommConnect         udpSockConnect
-
-UdpCommPkt
-udpCommAllocPacket()
-		__attribute__(( alias("udpSockGetBuf") ));
-#define udpCommAllocPacket     udpSockGetBuf
-
-void
-udpCommFreePacket(UdpCommPkt p)
-		__attribute__(( alias("udpSockFreeBuf") ));
-#define udpCommFreePacket      udpSockFreeBuf
-
-int
-udpCommJoinMcast(int sd, uint32_t mc_addr)
-		__attribute__(( alias("udpSockJoinMcast") ));
-#define udpCommJoinMcast       udpSockJoinMcast
-
-int
-udpCommLeaveMcast(int sd, uint32_t mc_addr)
-		__attribute__(( alias("udpSockLeaveMcast") ));
-#define udpCommLeaveMcast      udpSockLeaveMcast
-
-int
-udpCommSetIfMcast(int sd, uint32_t mc_addr)
-		__attribute__(( alias("udpSockSetIfMcast") ));
-#define udpCommSetIfMcast      udpSockSetIfMcast
-
-extern uint32_t udpCommMcastIfAddr
-		__attribute__(( alias("udpSockMcastIfAddr") ));
-#define udpCommMcastIfAddr     udpSockMcastIfAddr;
-
-#include <udpComm.h>
-
-UdpCommPkt
-udpCommRecv(int sd, int timeout_ms)
-{
-	return udpSockRecv(sd, ms2ticks(timeout_ms));
-}
-
-UdpCommPkt
-udpCommRecvFrom(int sd, int timeout_ms, uint32_t *ppeerip, uint16_t *ppeerport)
-{
-LanIpPacket rval;
-
-	rval = udpSockRecv(sd, timeout_ms);
-
-	if ( rval ) {
-		if ( ppeerip )
-			*ppeerip   = lpkt_ip(rval).src;
-		if ( ppeerport )
-			*ppeerport = ntohs(lpkt_udp(rval).sport);
-	}
-	return rval;
-}
-
-void *
-udpCommBufPtr(UdpCommPkt p)
-{
-	return udpSockUdpBufPayload((LanIpPacket)p);
-}
-
-int
-udpCommSend(int sd, void *payload, int payload_len)
-{
-	return _udpSockSendTo_internal(sd, 0, payload, payload_len, 0, 0);
-}
-
-
-int
-udpCommSendPkt(int sd, UdpCommPkt b, int payload_len)
-{
-	return _udpSockSendTo_internal(sd, b, 0, payload_len, 0, 0);
-}
-
-int
-udpCommSendPktTo(int sd, UdpCommPkt b, int payload_len, uint32_t ipaddr, int dport)
-{
-	return _udpSockSendTo_internal(sd, b, 0, payload_len, ipaddr, dport);
-}
-
-void
-udpCommReturnPacket(UdpCommPkt p, int len)
-{
-IpBscIf pif;
-	if ( (pif = udpSockGetBufIf(p)) ) {
-		udpSockHdrsReflect(&lpkt_udp_hdrs((LanIpPacket)p));	      /* point headers back to sender */
-		lanIpBscSendBufRawIp(pif, p); /* send off                     */
-	}
-}
