@@ -1,4 +1,6 @@
 2009/12/07 (TS):
+ - lanIpBasic.c: removed udpComm API (now an unbundled EPICS module in LCLS land).
+2009/12/07 (TS):
  - e1k_lldrv.c: fixed compiler warnings (alloc_rxbuf() callback nowadays
    takes 'uintptr_t *' argument).
 2009/12/06 (TS):
